zokrates_cli/examples/compile_errors/generics/conflicting_constant.zok
const u32 N = 42;

def foo<N>(field[N] a) -> bool {
    return true;
}

def main() {
    return;
}
